# diffusion-f90

./: .gitignore  CMakeLists.txt  README.md
diffusion/: CMakeLists.txt  diffusion.f90  diffusion.pc.cmake  main.f90
tests/: CMakeLists.txt  test_from_defaults.f90  test_from_file.f90  test_model_sanity_from_defaults.f90  test_model_sanity_from_file.f90
